# tddTemplate

./: CMakeLists.txt  README.md  main.cpp
scripts/: buildAndRunTests.sh
src/: tddTemplate.cpp  tddTemplate.h
test/: TestTest.cpp  test_main.cpp
